# GaussianProxy

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  README.md  check_micromamba_env.zsh  deps_listing_diffs.py  environment.yaml  inference.py  launcher.py  pyproject.toml  requirements.txt  requirements.yaml  ruff.toml  run_pylint_pre_commit_hook.sh  setup.py  train.py  update_deps.zsh
.github/workflows/: pylint.yml  ruff.yml
GaussianProxy/: inference.py  train.py
GaussianProxy/conf/: inference_conf.py  training_conf.py
GaussianProxy/conf/dataset/: BBBC021_196.yaml  BBBC021_196_fully_ordered_inference.py  BBBC021_196_hard_aug_inference.py  BBBC021_196_inference.py  ChromaLiveTL24h.yaml  Jurkat.yaml  Jurkat_brightfield_fully_ordered.yaml  Jurkat_brightfield_inference.py  Jurkat_inference.py  NASH_fibrosis_inference.py  NASH_steatosis.yaml  NASH_steatosis_inference.py  biotine_image.yaml  biotine_image_128_inference.py  biotine_image_255.yaml  biotine_image_red_channel.yaml  diabetic_retinopathy_inference.py  ependymal_cutout.yaml
GaussianProxy/conf/dataset/DeepCycle/: deepcycle_fully_ordered.yaml  deepcycle_fully_ordered_inference.py
GaussianProxy/conf/dataset/NASH_fibrosis/: NASH_fibrosis.yaml
GaussianProxy/conf/dataset/biotine/: biotine_png_128.yaml  biotine_png_128_hard_aug.yaml  biotine_png_128_hard_aug_inference.py  biotine_png_128_inference.py
GaussianProxy/conf/dataset/diabetic_retinopathy/: diabetic_retinopathy.yaml
GaussianProxy/conf/dataset/ependymal_context/: ependymal_context.yaml  ependymal_context_fully_ordered_inference.py
GaussianProxy/conf/dataset/ependymal_cutout/: ependymal_cutout_fully_ordered_inference.py
GaussianProxy/conf/net/: net_example.py
GaussianProxy/utils/: data.py  misc.py  models.py  training.py
conf/: conf.py  inference_conf.py  training_conf.py
conf/dataset/: biotine_image.yaml  biotine_image_128_inference.py  biotine_image_255.yaml  biotine_image_red_channel.yaml
conf/hydra/job_logging/: custom.yaml
conf/training_algorithm/: DMSB.yaml
notebooks/: artifacts_viz.ipynb  evaluations.ipynb  misc_figures.ipynb  playground.ipynb
scripts/: README.md  change_dataset_prefix_in_parquet_file.py  dataset_ordering.py  deps_listing_diffs.py  hard_augment_dataset.py  hard_augment_datatset.py  metrics_null_test.py  similarity_within_training_data.py  test_FID_augmentations.py  test_FID_hard_augmentations.py  torch_import_compare.py  user_imported_external_packages.py
scripts/misc_or_old/: bf16_to_uint8_overflow.ipynb  error_repro.py  test_FID_augmentations.py  test_FID_hard_augmentations.py
utils/: data.py  misc.py  models.py  training.py
