[build-system]
requires = ["setuptools>=62.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GaussianProxy"
version = "0.1"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["GaussianProxy", "my_conf"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pyright]
exclude = ["**/__pycache__", "**/experiments", "**/site-packages"]
