[project]
name = "gaussianproxy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.1.1",
    "dataclasses>=0.8",
    "diffusers>=0.31.0",
    "enlighten>=1.12.4",
    "ffmpeg>=1.4",
    "gitpython>=3.1.43",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "imageio>=2.36.0",
    "ipdb>=0.13.13",
    "ipympl>=0.9.4",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "moviepy>=1.0.3",
    "numpy>=2.1.3",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.7.4",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "submitit>=1.5.2",
    "termcolor>=2.5.0",
    "torch-fidelity",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "wandb>=0.17.1",
    "tifffile>=2024.12.12",
    "joblib>=1.4.2",
    "pip>=25.0.1",
]

[tool.uv.sources]
torch-fidelity = { git = "https://github.com/thethomasboyer/torch-fidelity-symlinks.git", rev = "master" }

[tool.ruff]
line-length = 120
lint.ignore = ["E721", "E731"]

[tool.pylint]
MASTER.ignore = [".venv", "src"]
MESSAGES_CONTROL.disable = ["E0401", "E0611", "C0301"]

[tool.pyright]
include = ["GaussianProxy", "my_conf", "notebooks", "scripts", "./*.py"]
exclude = [
    ".venv",
    ".ruff_cache",
    "src",
    "**/experiments",
    "**/__pycache__",
    "**/.local/share/uv/python",
    "**/.vscode-server/extensions",
    "**/.vscode/extensions",
]
